finished with tests for task 6.5