@@ -2,6 +2,7 @@ package org.lab_task_1;
 
 import org.lab_task_1.human.FullName;
 import org.lab_task_1.human.Human;
+import org.lab_task_1.student.Student;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
@@ -11,28 +12,33 @@ import java.util.*;
 import static org.lab_task_1.ListDemo.*;
 import static org.lab_task_1.ListDemoTest.HumansTestData.*;
 import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertTrue;
 import static org.testng.AssertJUnit.assertNotSame;
 
 public class ListDemoTest {
     static class HumansTestData {
-        public final static Human AlexandreMerson = new Human(
-            new FullName("Alexandre", "Igorevich", "Meson"),
+        public final static Human personAlexandreMerson = new Human(
+            new FullName("Alexandre", "Igorevich", "Merson"),
             LocalDate.of(2002, 6, 24),
             "Male",
             "Russian",
             176,
             82
         );
-        public final static Human OlgaMerson = new Human(
+
+        public final static Student studentAlexandreMerson = new Student(personAlexandreMerson, "IMIT");
+
+        public final static Human personOlgaMerson = new Human(
             new FullName("Olga", "Igorevich", "Meson"),
             LocalDate.of(1976, 12, 6),
             "Female",
             "Russian",
             155,
-            70
+            65
         );
-        public final static Human JulieVirth = new Human(
+
+        public final static Student studentOlgaMerson = new Student(personOlgaMerson, "Psychiatry");
+
+        public final static Human personJulieVirth = new Human(
             new FullName("Julie", "", "Virth"),
             LocalDate.of(2001, 3, 12),
             "Female",
@@ -40,7 +46,10 @@ public class ListDemoTest {
             179,
             79
         );
-        public final static Human CyrillVirth = new Human(
+
+        public final static Student studentJulieVirth = new Student(personJulieVirth, "Economics");
+
+        public final static Human personCyrillVirth = new Human(
             new FullName("Cyrill", "", "Virth"),
             LocalDate.of(1976, 10, 12),
             "Male",
@@ -48,7 +57,10 @@ public class ListDemoTest {
             180,
             90
         );
-        public final static Human LucyEarl = new Human(
+
+        public final static Student studentCyrillVirth = new Student(personCyrillVirth, "Boilogy");
+
+        public final static Human personLucyEarl = new Human(
             new FullName("Lucy", "", "Earl"),
             LocalDate.of(2000, 3, 12),
             "Female",
@@ -56,7 +68,10 @@ public class ListDemoTest {
             181,
             65
         );
-        public final static Human LucyBrown = new Human(
+
+        public final static Student studentLucyEarl = new Student(personLucyEarl, "Boilogy");
+
+        public final static Human personLucyBrown = new Human(
             new FullName("Lucy", "", "Brown"),
             LocalDate.of(2000, 10, 12),
             "Female",
@@ -64,7 +79,10 @@ public class ListDemoTest {
             169,
             65
         );
-        public final static Human LucyVirth = new Human(
+
+        public final static Student studentLucyBrown = new Student(personLucyBrown, "English Literature");
+
+        public final static Human personLucyVirth = new Human(
             new FullName("Lucy", "", "Virth"),
             LocalDate.of(2000, 5, 10),
             "Female",
@@ -72,7 +90,10 @@ public class ListDemoTest {
             171,
             65
         );
-        public final static Human LucyGreen = new Human(
+
+        public final static Student studentLucyVirth = new Student(personLucyVirth, "History");
+
+        public final static Human personLucyGreen = new Human(
             new FullName("Lucy", "", "Green"),
             LocalDate.of(2000, 11, 27),
             "Female",
@@ -81,7 +102,9 @@ public class ListDemoTest {
             65
         );
 
+        public final static Student studentLucyGreen = new Student(personLucyGreen, "Phisics");
     }
+
     @Test(dataProvider = "getNamesakesList_Data")
     public static void getNamesakesList_Test(
         List<Human> humans,
@@ -94,21 +117,21 @@ public class ListDemoTest {
 
     @DataProvider
     public static Object[][] getNamesakesList_Data() {
-        List<Human> humanList = List.of(LucyEarl, LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
-        List<Human> expectedList1 = List.of(LucyVirth, JulieVirth);
-        List<Human> expectedList2 = List.of(AlexandreMerson);
+        List<Human> humanList = List.of(personLucyEarl, personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        List<Human> expectedList1 = List.of(personLucyVirth, personJulieVirth);
+        List<Human> expectedList2 = List.of(personAlexandreMerson);
         List<Human> emptyList = new ArrayList<>(0);
 
         return new Object[][] {
-            { humanList, CyrillVirth, expectedList1 },
-            { humanList, OlgaMerson, expectedList2 },
-            { humanList, LucyGreen, emptyList },
-            { null, CyrillVirth, emptyList },
-            { null, OlgaMerson, emptyList },
-            { null, LucyGreen, emptyList },
-            { emptyList, CyrillVirth, emptyList },
-            { emptyList, OlgaMerson, emptyList },
-            { emptyList, LucyGreen, emptyList },
+            { humanList, personCyrillVirth, expectedList1 },
+            { humanList, personOlgaMerson, expectedList2 },
+            { humanList, personLucyGreen, emptyList },
+            { null, personCyrillVirth, emptyList },
+            { null, personOlgaMerson, emptyList },
+            { null, personLucyGreen, emptyList },
+            { emptyList, personCyrillVirth, emptyList },
+            { emptyList, personOlgaMerson, emptyList },
+            { emptyList, personLucyGreen, emptyList },
         };
     }
 
@@ -121,25 +144,25 @@ public class ListDemoTest {
         List<Human> actualList = getIndependentListWithoutGivenPerson(people, person);
         assertEquals(actualList, expectedList);
         assertNotSame(
-            people.get(people.indexOf(LucyBrown)), actualList.get(actualList.indexOf(LucyBrown)));
+            people.get(people.indexOf(personLucyBrown)), actualList.get(actualList.indexOf(personLucyBrown)));
     }
 
     @DataProvider
     public static Object[][] getIndependentListWithoutGivenPerson_PositiveCase_Data() {
-        List<Human> initialList = List.of(LucyEarl, LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
-        List<Human> initialListWithNull = Arrays.asList(LucyEarl, null, AlexandreMerson, JulieVirth, LucyBrown);
-        List<Human> expectedList1 = List.of(LucyEarl, LucyVirth, JulieVirth, LucyBrown);
-        List<Human> expectedList1WithNull = Arrays.asList(LucyEarl, null, JulieVirth, LucyBrown);
-        List<Human> expectedList2 = List.of(LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
-        List<Human> expectedList2WithNull = Arrays.asList(null, AlexandreMerson, JulieVirth, LucyBrown);
+        List<Human> initialList = List.of(personLucyEarl, personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        List<Human> initialListWithNull = Arrays.asList(personLucyEarl, null, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        List<Human> expectedList1 = List.of(personLucyEarl, personLucyVirth, personJulieVirth, personLucyBrown);
+        List<Human> expectedList1WithNull = Arrays.asList(personLucyEarl, null, personJulieVirth, personLucyBrown);
+        List<Human> expectedList2 = List.of(personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        List<Human> expectedList2WithNull = Arrays.asList(null, personAlexandreMerson, personJulieVirth, personLucyBrown);
 
         return new Object[][] {
-            { initialList, AlexandreMerson, expectedList1 },
-            { initialListWithNull, AlexandreMerson, expectedList1WithNull },
-            { initialList, LucyEarl, expectedList2 },
-            { initialListWithNull, LucyEarl, expectedList2WithNull },
-            { initialList, OlgaMerson, initialList },
-            { initialListWithNull, OlgaMerson, initialListWithNull },
+            { initialList, personAlexandreMerson, expectedList1 },
+            { initialListWithNull, personAlexandreMerson, expectedList1WithNull },
+            { initialList, personLucyEarl, expectedList2 },
+            { initialListWithNull, personLucyEarl, expectedList2WithNull },
+            { initialList, personOlgaMerson, initialList },
+            { initialListWithNull, personOlgaMerson, initialListWithNull },
         };
     }
 
@@ -199,22 +222,53 @@ public class ListDemoTest {
 
     @DataProvider
     public static Object[][] getSetOfOldestPeople_PositiveCase_Data() {
-        List<Human> listWithOneOldestPerson = List.of(LucyEarl, AlexandreMerson, CyrillVirth, LucyBrown);
-        List<Human> listWithOneOldestPersonAndNulls = Arrays.asList(LucyEarl, null, AlexandreMerson, CyrillVirth, null, LucyBrown);
-        Set<Human>  anOldestPerson = new TreeSet<>(List.of(CyrillVirth));
+        List<Human> peopleListWithOneOldestPerson = List.of(
+            personLucyEarl, personAlexandreMerson, personCyrillVirth, personLucyBrown
+        );
+        List<Human> peopleListWithOneOldestPersonAndNulls = Arrays.asList(
+            personLucyEarl, null, personAlexandreMerson, personCyrillVirth, null, personLucyBrown
+        );
+        Set<Human> oldestPerson  = new TreeSet<>(List.of(personCyrillVirth));
 
-        List<Human> listWithTwoOldestPeople = List.of(LucyEarl, OlgaMerson, AlexandreMerson, CyrillVirth, LucyBrown);
-        Set<Human>  twoOldestPeople = new TreeSet<>(List.of(OlgaMerson, CyrillVirth));
+        List<Student> studentsListWithOneOldestPerson = List.of(
+            studentLucyEarl, studentAlexandreMerson, studentCyrillVirth, studentLucyBrown
+        );
+        List<Student> studentsListWithOneOldestPersonAndNulls = Arrays.asList(
+            studentLucyEarl, null, studentAlexandreMerson, studentCyrillVirth, null, studentLucyBrown
+        );
+        Set<Student> oldestStudent = new TreeSet<>(List.of(studentCyrillVirth));
 
-        List<Human> listWithSameAgePeople = List.of(LucyBrown, LucyEarl, LucyVirth, LucyGreen);
+        List<Human> peopleListWithTwoOldestPeople = List.of(
+            personLucyEarl, personOlgaMerson, personAlexandreMerson, personCyrillVirth, personLucyBrown
+        );
+        Set<Human>  twoOldestPeople = new TreeSet<>(List.of(personOlgaMerson, personCyrillVirth));
+
+        List<Student> studentsListWithTwoOldestStudents = List.of(
+            studentLucyEarl, studentOlgaMerson, studentAlexandreMerson, studentCyrillVirth, studentLucyBrown
+        );
+        Set<Student>  twoOldestStudents = new TreeSet<>(List.of(studentOlgaMerson,studentCyrillVirth));
+
+        List<Human> peopleListWithSameAgePeople = List.of(
+            personLucyBrown, personLucyVirth, personLucyGreen
+        );
+        List<Student> studentsListWithSameAgeStudents = List.of(
+            studentLucyBrown,  studentLucyVirth, studentLucyGreen
+        );
 
         return new Object[][] {
-            { listWithOneOldestPerson, anOldestPerson },
-            { listWithTwoOldestPeople, twoOldestPeople },
-            { listWithSameAgePeople, new TreeSet<>(listWithSameAgePeople) },
-            { new ArrayList<>(0), new TreeSet<>() },
-            { listWithOneOldestPersonAndNulls, anOldestPerson },
-            { Arrays.asList(null, null, null), new TreeSet<>() },
+            { peopleListWithOneOldestPerson, oldestPerson },
+            { peopleListWithTwoOldestPeople, twoOldestPeople },
+            { peopleListWithSameAgePeople, new TreeSet<>(peopleListWithSameAgePeople) },
+            { new ArrayList<Human>(0), new TreeSet<Human>() },
+            { peopleListWithOneOldestPersonAndNulls, oldestPerson },
+
+            { Arrays.asList(null, null, null), new TreeSet<Human>() },
+
+            { studentsListWithOneOldestPerson, oldestStudent },
+            { studentsListWithTwoOldestStudents, twoOldestStudents },
+            { studentsListWithSameAgeStudents, new TreeSet<>(peopleListWithSameAgePeople) },
+            { new ArrayList<Student>(0), new TreeSet<Student>() },
+            { studentsListWithOneOldestPersonAndNulls, oldestStudent },
         };
     }
 }
